# craeft

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  docs.yml
docs/: getting-started.md  index.md  nomenclature.md
docs/api/: configuration-model.md  distributions.md  erdos-renyi.md  experiment.md  generators.md  index.md  metrics.md  motifs.md  plotting.md  point-processes.md  rewiring.md  sir.md
docs/concepts/: ccm.md  gillespie.md  motifs.md
src/craeft/: __init__.py  experiment.py
src/craeft/networks/: __init__.py
src/craeft/networks/generation/: __init__.py  erdos_renyi.py  generator.py
src/craeft/networks/metrics/: __init__.py  clustering.py  connectivity.py
src/craeft/networks/rewiring/: __init__.py  big_v.py  motif_decomposition.py
src/craeft/point_processes/: __init__.py  gillespie.py  process.py
src/craeft/point_processes/epidemics/: __init__.py  simulator.py  sir.py
src/craeft/utils/: __init__.py  plotting.py
tests/: __init__.py  conftest.py  test_experiment.py
tests/networks/generation/: test_erdos_renyi.py  test_generators.py
tests/networks/generation/configuration_model/: test_assembly.py  test_clustering_prediction.py  test_cma.py  test_connectors.py  test_core.py  test_handshake.py  test_hyperstub_matrix.py  test_matching.py  (+6 more)
tests/networks/metrics/: test_clustering.py  test_connectivity.py
tests/networks/rewiring/: test_big_v.py  test_motif_decomposition.py
tests/point_processes/epidemics/: test_gillespie.py  test_simulator.py  test_sir.py
(+21 files in other folders)
